Оформлені переходи і анімація сторінки Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,121 +58,139 @@
                 <ul class="project-list list">
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project1.jpg" alt="Фото ноутбука">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project1.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Технокряк</h2>
                                 <p class="project-name">Веб-сайт</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
+
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project2.jpg" alt="Фото баскетболистов">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project2.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Постер <span lang="en">Orlean vs Golden Star</span></h2>
                                 <p class="project-name">Дизайн</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project3.jpg" alt="Фото вывески ресторана">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project3.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Ресторан <span lang="en">Seafood</span> </h2>
                                 <p class="project-name">Приложение</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project4.jpg" alt="Фото наушников">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project4.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Проект <span lang="en">Prime</span> </h2>
                                 <p class="project-name">Маркетинг</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project5.jpg" alt="Фото двух коробок">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project5.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Проект <span lang="en">Boxes</span> </h2>
                                 <p class="project-name">Приложение</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project6.jpg" alt="Фото дисплея">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project6.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel"><span lang="en">Inspiration has no Borders</span> </h2>
                                 <p class="project-name">Веб-сайт</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project7.jpg" alt="Фото журнала">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project7.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Издание <span lang="en">Limited Edition</span> </h2>
                                 <p class="project-name">Дизайн</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project8.jpg" alt="Фото бирки">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project8.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel">Проект <span lang="en">LAB</span> </h2>
                                 <p class="project-name">Маркетинг</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                     <li class="project-item">
                         <a class="project-link link" href="#">
-                            <img class="project-img" src="./images/portfolio/project9.jpg"
-                                alt="Фото печати на ноутбуке">
+                            <div class="wrapper">
+                                <img class="project-img" src="./images/portfolio/project1.jpg" alt="Фото ноутбука">
+                                <p class="project-text">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-padding">
                                 <h2 class="project-titel"> <span lang="en">Growing Business</span>
                                 </h2>
                                 <p class="project-name">Приложение</p>
                             </div>
-                            <p class="project-text" hidden>Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
                         </a>
                     </li>
                 </ul>
